--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h>hola mundo<h>
+    <h1>H1 en el titulo principal<h1>
+        <h2>es un subtitulo</h2>
+        <p>Esta es la parte del parrafo</p>
+    
 </body>
 </html>
