uso de imagenes

--- a/index3.html
+++ b/index3.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <!--Logo y menu-->
+        <img src="imagenes/Logo_pepper.png">
         <nav>
             <li><a href="https://colombia.travel/es/palomino">Biblografia</a></li>
             <li><a href="https://colombia.travel/es/palomino">Fotos</a></li>
@@ -22,6 +23,7 @@
          <h2>
             Peliculas
         </h2>
+      
         <p>My life</p>
         <p>cold mountain</p>
         <p>Los otros</p>
@@ -34,3 +36,9 @@
 
 </body>
 </html>
+<!-- la etiqueta para imagenes es "<img>"
+tiene como atributos 
+scr- ubicacion de la imagen atributo obigatorio AO
+alt- si la imagen no se puede mostrar, muestre un testo "Plan B" AO
+width- tamaño de la imagen
+-->
